<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_login"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/content_image_login"
            android:src="@drawable/image_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:alpha="0"
            android:text="@string/text_yuk_login"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_login"
            tools:alpha="100" />

        <TextView
            android:id="@+id/description_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:text="@string/text_pastikan_data"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_login"
            tools:alpha="100" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_login"
            app:startIconDrawable="@drawable/icon_email_24"
            tools:alpha="100">

            <com.candra.dicodingstoryapplication.customView.MyEditTextEmail
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:alpha="0"
                android:contentDescription="@string/content_description_email"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:alpha="100"
                tools:ignore="ContentDescription" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
            app:startIconDrawable="@drawable/icon_password_24"
            tools:alpha="100">

            <com.candra.dicodingstoryapplication.customView.MyEditTextPassword
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:alpha="0"
                android:contentDescription="@string/content_description_password"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:alpha="100"
                tools:ignore="ContentDescription" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.candra.dicodingstoryapplication.customView.MyButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            android:letterSpacing="0.003"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
            tools:alpha="100" />

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:alpha="0"
            android:text="@string/no_account"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            tools:alpha="100" />

        <TextView
            android:id="@+id/tv_no_account_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:text="@string/no_account_to_register"
            app:layout_constraintEnd_toEndOf="@id/tv_no_account"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="@id/tv_no_account"
            app:layout_constraintTop_toBottomOf="@id/tv_no_account"
            tools:alpha="100" />

        <com.candra.dicodingstoryapplication.customView.MyButton
            android:id="@+id/btn_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            android:letterSpacing="0.003"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_no_account_to_register"
            app:layout_constraintStart_toStartOf="@+id/tv_no_account_to_register"
            app:layout_constraintTop_toBottomOf="@+id/tv_no_account_to_register"
            tools:alpha="100" />

        <ProgressBar
            android:id="@+id/pb_loading_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>