...
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/content_image_home"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/fab_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        tools:src="@drawable/get_started" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
...
