...
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/greetings" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_story"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp" />

        </LinearLayout>

...
